--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Trirong"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link />
+    <script
+      src="https://kit.fontawesome.com/7b21585175.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+
+  <body class="container container-md">
+    <header class="pt-2 pb-2 text-center header">
+      <h1>Weather Dashboard</h1>
+    </header>
+    <main class="row">
+      <div class="col-md-12 col-xl-3">
+        <div class="card mb-3">
+          <h2 class="h2 card-header custom-card-header">Search for City:</h2>
+          <div class="card-body">
+            <form class="form-inline search-input">
+              <input
+                id="search-location"
+                class="form-control mr-sm-2 mb-3 search-bar"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button
+                class="btn btn-outline-success search-btn btn-block"
+                id="search-btn"
+                onclick="lookup(event)"
+              >
+                Search
+              </button>
+            </form>
+          </div>
+          <div class="hidden">
+            <ul class="list-group list-group-flush" id="searched-history"></ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12 col-xl-9">
+        <div class="card mb-4">
+          <div id="current-weather"></div>
+        </div>
+        <div class="h2 card mb-1 card-header">5-Day Forecast:</div>
+        <div id="weekday-focast"></div>
+      </div>
+    </main>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
